cluster/home-assistant/code-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: docker.io/linuxserver/code-server:4.21.1@sha256:042af3b24951ac3cf34a55f94d5171a6caa9816c04c01620ad42b9d82c9e90a8
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: config
              mountPath: /config
          livenessProbe:
            exec:
              command:
                - cat
                - /config/configuration.yaml
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ha-config
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - edit.ha.luma.chrismiller.xyz
      secretName: edit-ha-luma-tls
  rules:
    - host: edit.ha.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 8443
