cluster/home-assistant/home-assistant.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      nodeName: yoshi
      containers:
        - name: home-assistant
          image: docker.io/homeassistant/home-assistant:2024.3@sha256:48773146b3b7f7d4811426a33044a322e8e4fcda97b9ed9a6b37d7e5b649af0b
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tz-config
              mountPath: /etc/localtime
            - mountPath: /dev/ttyUSB0
              name: dev
          securityContext:
            privileged: true
        - name: editor
          image: sickp/alpine-sshd@sha256:0f5a58ba5bfc5549a910264f32c337903967bb377d596c91c03611f15b4699ad
          ports:
            - containerPort: 22
          volumeMounts:
            - name: config
              mountPath: /config
          livenessProbe:
            exec:
              command:
                - cat
                - /config/configuration.yaml
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ha-config
            readOnly: false
        - name: tz-config
          hostPath:
            path: /etc/localtime
            type: File
        - name: dev
          hostPath:
            path: /dev/ttyUSB0
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - ha.luma.chrismiller.xyz
      secretName: ha-luma-tls
  rules:
    - host: ha.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
